Fix Dark Mode (#147)
* Fix Dark Mode

* fix dark mode

* add navbar shadow

* change dark theme color

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -158,10 +158,10 @@
     @apply fixed inset-0 h-full w-full bg-black opacity-50 overscroll-none cursor-default;
   }
   .sub-navbar-block {
-    @apply fixed mt-2 p-1 flex flex-col z-40 bg-white rounded-lg shadow-xl dark:bg-darkSecondary;
+    @apply fixed mt-2 p-1 flex flex-col z-40 bg-white rounded-lg shadow-xl dark:bg-darkThird;
   }
   .sub-navbar-item {
-    @apply block p-1 text-gray-800 dark:text-gray-50 hover:bg-indigo-500 hover:text-white;
+    @apply block p-1 text-gray-800 dark:text-gray-300 hover:bg-indigo-500 hover:text-white;
   }
   .dropdown-arrow {
     @apply h-3 w-3 md:h-4 md:w-4 mx-1 text-black dark:invert;
